Styling for hero, wip

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
     </header>
 
     <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign Up</button>
-        <img src="" alt="this is a placeholder for an image">
+        <div class="left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="right">
+            <img src="" alt="this is a placeholder for an image">
+        </div>
     </div>
 
     <div class="content">
